hphp/hack/test/typecheck/reactive/mutable_as_hint7.php.like_types.exp
File "mutable_as_hint7.php", line 13, characters 6-20:
Invalid argument (Typing[4110])
File "mutable_as_hint7.php", line 10, characters 38-38:
Expected A
File "rx/functions.hhi", line 30, characters 25-25:
But got dynamic because it is an unenforceable type
